# es_aurora

./: .gitmodules  CMakeLists.txt  su.sovietgames.everlasting_summer.desktop
rpm/: su.sovietgames.everlasting_summer.changes.in  su.sovietgames.everlasting_summer.changes.run.in  su.sovietgames.everlasting_summer.spec
src/: main.cpp
